--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -48,3 +48,7 @@
 :where(button) {
   touch-action: manipulation;
 }
+
+[popover] {
+  border: none;
+}
